<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".calculadora.ui.CalculadoraFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp100"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp25"
        android:text="@string/calculadora"
        android:textSize="@dimen/sp24"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/seleccione_tipo_de_moneda_e_ingrese_un_monto"
        android:textSize="@dimen/sp18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_tipo_moneda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/tipos_monedas"/>

        <Space
            android:layout_width="@dimen/dp25"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_convertir_monto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comto_a_convertir"
            android:inputType="number" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_simbolo_igual"
        android:layout_width="@dimen/dp50"
        android:layout_height="@dimen/dp50"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp10"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dolar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dolar"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <Space
            android:layout_width="@dimen/dp25"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dolar_intercambio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dolar_intercambio"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_uf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/uf"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <Space
            android:layout_width="@dimen/dp25"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ivp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ivp"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_euro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/euro"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <Space
            android:layout_width="@dimen/dp25"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ipc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ipc"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_utm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/utm"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <Space
            android:layout_width="@dimen/dp25"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_imacec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/imacec"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tpm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tpm"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <Space
            android:layout_width="@dimen/dp25"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_libra_cobre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/libra_de_cobre"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bitcoin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/bitcoin"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />

        <Space
            android:layout_width="@dimen/dp25"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pesos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pesos_chilenos"
            android:textAlignment="center"
            android:textSize="@dimen/sp24"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>